--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -52,9 +52,9 @@ jobs:
         run: "[[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true"
       - name: Build with Hugo
         env:
-          HUGO_CACHEDIR: ${{ runner.temp }}/hugo_cache
-          HUGO_ENVIRONMENT: production
-          TZ: America/Los_Angeles
+           HUGO_CACHEDIR: ${{ runner.temp }}/hugo_cache
+           HUGO_ENVIRONMENT: production
+           TZ: Asia/Tbilisi
         run: |
           hugo \
             --gc \
